# transmission-rpc

./: .deepsource.toml  .gitignore  .hg_archival.txt  .hgignore  .hgtags  .mypy.ini  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .readthedocs.yml  .sourcery.yaml  .travis.yml  AUTHORS  CHANGELOG  ChangeLog  LICENSE  LICENSE.old  MANIFEST.in  README  README.md  README.rst  Taskfile.yaml  changelog.md  example.py  lintrc  pyproject.toml  requirements-doc.txt  setup.cfg  setup.py  taskfile.yaml
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: renovate.json
.github/codeql/: codeql-config.yaml
.github/workflows/: build.yaml  ci.yaml  codeql-analysis.yaml  lint-other.yaml  lint.yaml  pr.yaml  release.yaml
.github/workflows/matcher/: flake8.json  pylint.json
ci/: install_and_start_downloader  stop_downloader.py
contrib/: helical.py
doc/: a.bat  conf.py  index.rst
doc/_static/: style.css
doc/reference/: transmissionrpc.rst
doc/source/: client.rst  conf.py  index.rst  session.rst  utils.rst
docs/: .readthedocs.yaml  client.rst  conf.py  enum.rst  index.rst  session.rst  torrent.rst  types.rst
docs/source/: client.rst  conf.py  constants.rst  index.rst  session.rst  torrent.rst
docs/source/_templates/: layout.html
docs/source/examples/: change_torrent_file.py  quick-start.py
test/: __init__.py  client.py  top.py  torrent.py  utils.py
test/data/: add.json  add_torrent_base64.json  adduri.json  addurl.json  construction.json  get_torrent.json  get_torrent_hash.json  get_torrents_2to3.json  get_torrents_hashes.json  info.json  remove.json  start.json  stop.json  torrent.txt  ubuntu-12.04.2-alternate-amd64.iso.torrent  verify.json
tests/: conftest.py  docker-compose.yaml  test_client.py  test_decorator.py  test_parse_id.py  test_session.py  test_torrent.py  test_utils.py  util.py
tests/integration/: test_client.py  test_torrent.py  test_utils.py
tests/unit/: conftest.py  test_fixture_integrity.py  test_unix_socket.py  test_utils.py
tests/unit/client/: test_argument_processing.py  test_id_parsing.py  test_lifecycle.py  test_parse_id.py  test_requests.py  test_rpc_methods.py
tests/unit/data/: test_session.py  test_torrent.py  test_types.py
transmission-rpc/: __init__.py  client.py  constants.py  httphandler.py  session.py  torrent.py  utils.py
transmission_rpc/: __init__.py  _unix_socket.py  client.py  constants.py  decorator.py  ds.py  error.py  httphandler.py  lib_types.py  session.py  test_client.py  torrent.py  types.py  utils.py  version.py
