[metadata]
name = transmission_rpc
keywords = transmission rpc
description = Python module that implements the Transmission bittorent client RPC protocol.
long_description = https://github.com/Trim21/transmission-rpc
;long_description_content_type = text/markdown

author = Trim21
author_email = trim21me@hotmail.com

url = https://github.com/Trim21/transmission-rpc
zip_safe = True
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Intended Audience :: Developers
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Topic :: Communications :: File Sharing
    Topic :: Internet
    Topic :: Software Development :: Version Control :: Git
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages = find:
python_requires = >=3.4

install_requires =
    requests

setup_requires =
    setuptools>=40.0.0
    pbr

[options.packages.find]
exclude = ci,

[options.extras_require]
doc =
    Sphinx>=1.8.1,<2.0.0
    sphinx-rtd-theme>=0.4.1,<1.0.0
